<resources>
    <string name="app_name">CapStone</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="delete">Delete</string>
    <!-- Home page -->
    <string name="Intro">Movie reviewer</string>
    <string name="description">This can be used to search for movies and actors/actress!</string>
    <string name="Moviebtn">Movie(s)</string>
    <string name="Actorbtn">Actor(s)</string>
    <string name="Ratingbtn">Rate a movie</string>
    <string name="Reviewbtn">Reviews</string>

    <!-- MovieOverview -->
    <string name="submit">Submit</string>
    <string name="title">Title</string>

    <!-- MovieInfo -->
    <string name="review">Reviews</string>
    <string name="rating">Rating</string>
    <string name="titleText">Title:</string>
    <string name="runtimeText">Runtime:</string>
    <string name="plotText">Plot of the movie:</string>
    <string name="actorText">Actors/Actress:</string>
    <string name="nominations">Nominations amount:</string>
    <string name="releasedateText">Release Date:</string>

    <!-- Rating -->
    <string name="usernameRating">Username</string>
    <string name="movieRating">Movie Title</string>
    <string name="gradeRating">Rating grade (1-10)</string>
    <string name="reviewRating">Review</string>

    <!-- Review -->
    <string name="username">Username: </string>
    <string name="movie">Movie: </string>
    <string name="ratingTitle">Rating: </string>
    <string name="reviewTitle">Review: </string>
    <string name="home">Home</string>

</resources>