<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/ivMoviebg"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <TextView
            android:id="@+id/tvTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/titleText"
            app:layout_constraintStart_toEndOf="@id/ivMoviebg"
            app:layout_constraintTop_toTopOf="@id/ivMoviebg" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/ivMoviebg"
            app:layout_constraintTop_toBottomOf="@id/tvTitleText"
             />

        <TextView
            android:id="@+id/tvReleasedateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/releasedateText"
            app:layout_constraintStart_toEndOf="@id/ivMoviebg"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvReleasedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/ivMoviebg"
            app:layout_constraintTop_toBottomOf="@+id/tvReleasedateText" />

        <TextView
            android:id="@+id/tvRunTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/runtimeText"
            app:layout_constraintStart_toEndOf="@id/ivMoviebg"
            app:layout_constraintTop_toBottomOf="@+id/tvReleasedate" />

        <TextView
            android:id="@+id/tvRunTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/ivMoviebg"
            app:layout_constraintTop_toBottomOf="@+id/tvRunTimeText" />

        <TextView
            android:id="@+id/tvActorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/actorText"
            app:layout_constraintStart_toEndOf="@id/ivMoviebg"
            app:layout_constraintTop_toBottomOf="@id/tvRunTime" />

        <TextView
            android:id="@+id/tvActor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvActorText"
            app:layout_constraintStart_toEndOf="@id/ivMoviebg"/>

        <TextView
            android:id="@+id/tvAwardsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/nominations"
            app:layout_constraintStart_toEndOf="@id/ivMoviebg"
            app:layout_constraintTop_toBottomOf="@id/tvActor" />

        <TextView
            android:id="@+id/tvAwards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvAwardsText"
            app:layout_constraintStart_toEndOf="@id/ivMoviebg"/>

        <TextView
            android:id="@+id/tvPlotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/plotText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivMoviebg" />

        <TextView
            android:id="@+id/tvPlot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvPlotText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnRate"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/rating"
            app:layout_constraintEnd_toStartOf="@id/btnReview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPlot" />

        <Button
            android:id="@+id/btnReview"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/review"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnRate"
            app:layout_constraintTop_toBottomOf="@id/tvPlot" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>