<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvUserTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMovieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie" />

            <TextView
                android:id="@+id/tvMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRatingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratingTitle" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvReviewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviewTitle" />

        <TextView
            android:id="@+id/tvReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>